<resources>
    <string name="app_name">ALL</string>
    <string name="repeat_text">Трениться</string>
    <string name="learn_text">Учить</string>
    <string name="name">ALL</string>
    <string name="back_button"><![CDATA[<]]></string>
    <string name="next_button"><![CDATA[>]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word">WORD</string>
    <string name="translate">Translate</string>
</resources>
