<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.colorhills.all.LearnActivity">

    <TextView
        android:id="@+id/word"
        android:layout_width="372dp"
        android:layout_height="59dp"
        android:text="@string/word"
        android:textSize="50px"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="311dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/tr_word"
        android:layout_width="392dp"
        android:layout_height="62dp"
        android:text="@string/translate"
        android:textSize="50px"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/word"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="231dp"
        android:onClick="getPrev"
        android:text="@string/back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/next_button"
        android:onClick="getNext"
        android:layout_marginEnd="2dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="231dp"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
